# KDVStocksCoreLib

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/implementation/: CMakeLists.txt  KDVStocksCore.cpp
src/interface/: CMakeLists.txt  KDVStocksCore.hpp
src/tools/: CMakeLists.txt
unit_tests/: CMakeLists.txt  testHelloWorld.cpp
